k8s/infrastructure/network/policies/infrastructure/velero/allow-velero-access.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: velero-access
  namespace: velero
  labels:
    policy-type: infrastructure-audit
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: velero
  description: "Allow Velero backup operator access"
  ingress:
  - fromEntities:
    - host
    - remote-node
    - ingress
    toPorts:
    - ports:
      - port: "8085"
        protocol: TCP
  egress:
  - toEntities:
    - kube-apiserver
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
  - toEntities:
    - world
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
  - toFQDNs:
    - matchName: "fsn1.your-objectstorage.com"
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
